Altera sizede imagem fundo perfil

--- a/src/components/styles/partials/_perfil.scss
+++ b/src/components/styles/partials/_perfil.scss
@@ -7,6 +7,10 @@
   background-size: cover;
   background-color: $primary;
 
+  @include mq(480) {
+    background-size: contain;
+  }
+
   .perfil-container {
     width: 100%;
     display: flex;
