--- a/src/components/styles/partials/_perfil.scss
+++ b/src/components/styles/partials/_perfil.scss
@@ -8,7 +8,7 @@
   background-color: $primary;
 
   @include mq(480) {
-    background-size: initial;
+    background-size: inherit;
   }
 
   .perfil-container {
