Altera size image project

--- a/src/components/styles/partials/_project-page.scss
+++ b/src/components/styles/partials/_project-page.scss
@@ -64,6 +64,7 @@
     /* background-attachment: fixed !important; */
 
     @include mq(480) {
+      background-size: auto !important;
       height: 200px !important;
     }
   }
