--- a/src/components/styles/partials/_project-page.scss
+++ b/src/components/styles/partials/_project-page.scss
@@ -53,7 +53,11 @@
   }
   #portfolio-projects .project-image {
     width: 100%;
-    margin-bottom: 1rem;
+    margin-bottom: 40%;
+
+    @include mq(480) {
+      padding-top: 60%;
+    }
   }
   #portfolio-projects .project-image img {
     // width: 100%;
@@ -65,7 +69,7 @@
 
     @include mq(480) {
       background-size: auto !important;
-      height: 200px !important;
+      height: 240px !important;
     }
   }
   #portfolio-projects h1 {
