--- a/src/components/styles/partials/_project-page.scss
+++ b/src/components/styles/partials/_project-page.scss
@@ -56,7 +56,7 @@
     margin-bottom: 40%;
 
     @include mq(480) {
-      padding-top: 60%;
+      padding-bottom: 60%;
     }
   }
   #portfolio-projects .project-image img {
