--- a/src/components/styles/partials/_project-page.scss
+++ b/src/components/styles/partials/_project-page.scss
@@ -59,7 +59,7 @@
     // width: 100%;
     height: 450px !important;
     background-size: cover !important;
-    background-position: top center !important;
+    background-position: center !important;
     background-repeat: no-repeat !important;
     /* background-attachment: fixed !important; */
 
