Corrigi padding do nav

--- a/src/components/styles/partials/_project-page.scss
+++ b/src/components/styles/partials/_project-page.scss
@@ -5,6 +5,7 @@
     .projects-nav {
       display: flex;
       flex-direction: row;
+      padding: 10px 0;
   
       .spacer {
         flex: 1;
