--- a/src/components/styles/partials/_about.scss
+++ b/src/components/styles/partials/_about.scss
@@ -60,17 +60,18 @@
     }
 
     h1 {
-      font-size: 3.8em;
+      font-size: 3em;
       line-height: 1.3em;
     }
 
     p {
-      font-size: 1.50em;
+      font-size: 1.2em;
       line-height: 1.3em;
       text-indent: 1.3em;
     }
     p a {
       text-decoration: none;
+      color: $accent;
     }
   }
 }
