Altera imagem skills

--- a/src/components/styles/partials/_skills.scss
+++ b/src/components/styles/partials/_skills.scss
@@ -67,7 +67,7 @@
     width: 50%;
     height: 500px;
     padding: 30px;
-    background-image: url("../../images/notebook.png");
+    background-image: url("../../images/estudante.png");
     background-position: center;
     background-size: cover;
 
