--- a/src/components/styles/partials/_skills.scss
+++ b/src/components/styles/partials/_skills.scss
@@ -59,6 +59,7 @@
       &:hover {
         filter: brightness(105%) drop-shadow(6px 6px 6px #1d2021);
         transform: scale(1.2);
+        cursor: pointer;
       }
     }
   }
