Altera imagem do fundo

--- a/src/components/styles/menuoverlay.scss
+++ b/src/components/styles/menuoverlay.scss
@@ -5,7 +5,7 @@
     align-items: center;
     height: 100vh;
     background-blend-mode: color-dodge;
-    background-image: url("../../images/texture.jpg");
+    background-image: url("../../images/texture.png");
     background-position: center;
     background-size: cover;
     background-color: #11141E;
