--- a/src/components/styles/partials/_vars.scss
+++ b/src/components/styles/partials/_vars.scss
@@ -1,7 +1,7 @@
 // Variables
-$primary: #11141E;
-$accent: #6854EA;
-$highlight: #6854EA;
+$primary: #0b0b0b;
+$accent: #04dc3e;
+$highlight: #04dc3e;
 $text: #FFF;
 
 // Mixins
