--- a/src/components/styles/main.scss
+++ b/src/components/styles/main.scss
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css?family=Bitter|Roboto+Slab|Open+Sans:400,800");
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500;0,700;0,900;1,300;1,400&display=swap');
 
 @import "partials/_media_queries";
 @import "partials/_layout";
@@ -19,17 +19,22 @@ body {
 }
 
 body {
-    font-family: 'Roboto Slab', serif;
+    font-family: 'Roboto', serif;
     background: $primary;
     color: #FFF;
 
     h1 {
-        font-family: "Open Sans", sans-serif;
         color: $accent;
+        font-weight: 900;
     }
 
     h2 {
-        font-family: "Roboto Slab", serif;
         color: $text;
-      }
+    }
+
+    p {
+        color: $text;
+        font-weight: 500;
+    }
+
 }
