--- a/src/components/styles/partials/_skills.scss
+++ b/src/components/styles/partials/_skills.scss
@@ -1,45 +1,47 @@
 .skills {
-  background: $primary;
   width: 100%;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-evenly;
-  align-items: center;
+  max-width: 1000px;
+  margin: 0 auto;
+  padding: 4rem 0;
+  text-align: center;
 
-  .skill-container {
-    width: 50%;
-    padding: 1rem 4rem;
+  h1 {
+    font-size: 3.8em;
+  }
+
+  p {
+    font-size: 1.4em;
+  }
+
+  .skills-container {
+    background: $primary;
     display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
 
-    @include mq(1280) {
-      padding: 1rem 5rem;
-    }
-
-    @include mq(1024) {
+    .skills-dev {
       width: 100%;
-    }
-
-    @include mq(768) {
-      padding: 1rem;
-    }
-
-    .skill-title {
-      width: 100%;
-
-      h2 {
-        font-size: 2.6em;
-        text-align: center;
-        margin-top: 0.8rem;
-
-        @include mq(1024) {
-          width: 100%;
-        }
+      padding: 1rem 4rem;
+      display: flex;
+      justify-content: center;
+      flex-wrap: wrap;
+  
+      @include mq(1280) {
+        padding: 1rem 5rem;
+      }
+  
+      @include mq(1024) {
+        width: 100%;
+      }
+  
+      @include mq(768) {
+        padding: 1rem;
       }
     }
 
-    .skill-logo {
+    .skills-logo {
+      width: 3rem;
       margin: 1rem;
       height: 2rem;
       filter: brightness(100%) drop-shadow(4px 4px 3px #444);
@@ -53,7 +55,7 @@
       }
     }
 
-    .skill-transition {
+    .skills-transition {
       transition: all 0.5s ease;
 
       &:hover {
@@ -61,29 +63,6 @@
         transform: scale(1.2);
         cursor: pointer;
       }
-    }
-  }
-
-  .skill-img {
-    width: 50%;
-    padding: 30px;
-
-    @include mq(1024) {
-      display: none;
-    }
-
-    @include mq(768) {
-      padding: 0 20px;
-    }
-
-    @include mq(480) {
-      width: 100%;
-    }
-
-    img {
-      width: 80%;
-      margin-top: 40px;
-      margin-bottom: 0;
     }
   }
 }
