--- a/src/components/styles/partials/_work.scss
+++ b/src/components/styles/partials/_work.scss
@@ -1,12 +1,12 @@
 #projects {
   padding: 5em 0;
   width: 100%;
+  max-width: 1200px;
+  margin: 0 auto;
   display: flex;
   justify-content: center;
   align-items: flex-start;
-  // Create mixin for code below
   background-blend-mode: multiply;
-  // background-image: url("../../images/fake_luxury_2X.png");
   background-color: $primary;
 
   h1 {
@@ -34,7 +34,7 @@
 
   .projects-container {
     text-align: center;
-    width: 75%;
+    width: 80%;
     height: 100%;
 
     @include mq(480) {
@@ -60,6 +60,7 @@
   overflow: hidden;
   position: relative;
   border-radius: 4px;
+  border: 1px solid #444;
 
   @include mq(1024) {
     margin-bottom: 50px;
