--- a/src/components/styles/menuoverlay.scss
+++ b/src/components/styles/menuoverlay.scss
@@ -8,7 +8,7 @@
     background-image: url("../../images/texture.png");
     background-position: center;
     background-size: cover;
-    background-color: #11141E;
+    background-color: #0b0b0b;
     position: fixed;
     top: 0;
     left: 0;
@@ -52,14 +52,13 @@
   
         a {
           text-decoration: none;
-          text-transform: uppercase;
           font-size: 3em;
           cursor: pointer;
           color: #dfe0d4;
           transition: 0.5s;
   
           &:hover {
-            color: #6854EA;
+            color: #04dc3e;
           }
         }
       }
