--- a/src/components/styles/partials/_perfil.scss
+++ b/src/components/styles/partials/_perfil.scss
@@ -31,27 +31,23 @@
 
 
   .perfil-text {
-    width: 500px;
+    width: 100%;
+    max-width: 500px;
     margin: 0 30px;
 
     h1 {
       font-size: 3.5em;
       line-height: 90px;
       margin-bottom: 12px;
+      
+        @include mq(480) {
+          font-size: 2.5em;
+        }
     }
 
-    h2 {
-      font-size: 2.4em;
+    p {
+      font-size: 1.8em;
       margin-bottom: 0.2em;
-    }
-
-    @include mq(480) {
-      width: 350px;
-      margin: 0;
-    }
-
-    @include mq(320) {
-      width: 325px;
     }
 
     @media only screen and (max-width: 900px) and (orientation: landscape) {
@@ -133,7 +129,7 @@
       }
 
       @include mq(1140) {
-        width: 18rem;
+        width: 16rem;
       }
 
       @include mq(768) {
@@ -141,10 +137,8 @@
       }
 
       @include mq(480) {
-        width: 18rem;
-        img {
-          margin: 0;
-        }
+        margin-top: 60px;
+        width: 14rem;
       }
 
       @media only screen and (max-width: 900px) and (orientation: landscape) {
