--- a/src/components/styles/partials/_project-page.scss
+++ b/src/components/styles/partials/_project-page.scss
@@ -105,7 +105,7 @@
     margin-right: 10px;
   }
   #portfolio-projects .info .buttons a:hover {
-    background: #7167b5;
+    background: #39cd60;
   }
   #portfolio-projects .info .buttons a:hover .fas {
     color: $accent;
