--- a/src/components/styles/partials/_contact.scss
+++ b/src/components/styles/partials/_contact.scss
@@ -13,6 +13,15 @@
       h1 {
         margin-top: 30px;
         font-size: 3.8em;
+
+        @include mq(480) {
+          font-size: 3em;
+        }
+    
+        @include mq(320) {
+          font-size: 3em;
+          line-height: 75px;
+        }
       }
     }
 
@@ -32,6 +41,10 @@
 
       p {
         font-size: 1.3em;
+
+        @include mq(480) {
+          font-size: 1.1em;
+        }
       }
 
       .email {
