--- a/src/components/styles/partials/_project-page.scss
+++ b/src/components/styles/partials/_project-page.scss
@@ -55,6 +55,8 @@
   #portfolio-projects .project-image {
     width: 100%;
     margin-bottom: 1fr;
+    border-radius: 4px;
+    border: 2px solid #444;
   }
   #portfolio-projects .project-image img {
     // width: 100%;
@@ -73,7 +75,7 @@
   #portfolio-projects h1 {
     text-align: center;
     font-size: 4rem;
-    font-weight: 600;
+    font-weight: 700;
     // font-style: italic;
     margin-bottom: 1.5rem;
   }
@@ -134,7 +136,6 @@
     }
   }
   #portfolio-projects h3 {
-    font-family: "Roboto Slab", serif;
     font-size: 2rem;
     font-weight: 700;
     margin: 3rem auto;
