--- a/src/components/styles/partials/_skills.scss
+++ b/src/components/styles/partials/_skills.scss
@@ -20,6 +20,11 @@
 
   p {
     font-size: 1.4em;
+    padding: 10px;
+
+    @include mq(480) {
+      font-size: 1.1em;
+    }
   }
 
   .skills-container {
