added styles page 404

--- a/src/components/styles/main.scss
+++ b/src/components/styles/main.scss
@@ -10,6 +10,7 @@
 @import "partials/_skills";
 @import "partials/_work";
 @import "partials/project-page";
+@import "partials/404";
 @import "partials/_contact";
 @import "partials/_footer";
 
