--- a/src/components/styles/partials/404.scss
+++ b/src/components/styles/partials/404.scss
@@ -1,12 +1,16 @@
 .error-content {
+  width: 100%;
+  max-width: 1200px;
+  text-align: center;
+
+  .error-content {
     width: 100%;
     max-width: 1200px;
     display: flex;
     flex-direction: row;
-    justify-content: center;
+    justify-content: left;
     align-items: center;
-    margin: 50px auto;
-
+    
     h1 {
       font-size: 5.8em;
   
@@ -14,4 +18,12 @@
         font-size: 4em;
       }
     }
+
+    .error-link {
+      a {
+        text-decoration: none;
+        color: $accent;
+      }
+    }
+  }
 }
