--- a/src/components/styles/partials/404.scss
+++ b/src/components/styles/partials/404.scss
@@ -2,6 +2,9 @@
   width: 100%;
   max-width: 1200px;
   margin: 50px auto;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
 
   .error-content {
     flex-direction: row;
