--- a/src/components/styles/partials/404.scss
+++ b/src/components/styles/partials/404.scss
@@ -1,7 +1,7 @@
 .error {
   width: 100%;
   max-width: 1200px;
-  margin: 0 auto;
+  margin: 60px auto;
   height: 100vh;
   flex-direction: flex;
   justify-content: center;
