--- a/src/components/styles/partials/_vars.scss
+++ b/src/components/styles/partials/_vars.scss
@@ -1,7 +1,7 @@
 // Variables
-$primary: #0b0b0b;
-$accent: #04dc3e;
-$highlight: #04dc3e;
+$primary: #16202c;
+$accent: #58a6ff;
+$highlight: #58a6ff;
 $text: #FFF;
 
 // Mixins
