--- a/src/components/styles/partials/_header.scss
+++ b/src/components/styles/partials/_header.scss
@@ -48,12 +48,11 @@
           
           .navbar-link {
             text-decoration: none;
-            font-family: Montserrat;
             font-size: 0.7rem;
             font-weight: bold;
             background: $highlight;
             color: $text;
-            padding: 0.3rem;
+            padding: 0 .6rem;
             border-radius: 4px;
             transition: all 0.3s ease 0s;
           }
