--- a/src/components/styles/partials/_headroom.scss
+++ b/src/components/styles/partials/_headroom.scss
@@ -25,7 +25,7 @@
     transform: translateY(0);
     @include headroom-trans;
     background-blend-mode: multiply;
-    background-color: #192734;
+    background-color: #161b22;
     box-shadow: 0 5px 30px rgba(0, 0, 0, 0.2);
   }
   
