--- a/src/components/styles/partials/_footer.scss
+++ b/src/components/styles/partials/_footer.scss
@@ -1,3 +1,12 @@
+hr {
+    background: #58a6ff;
+    display: flex;
+    margin: 0px auto;
+    height: 1px;
+    width: 100%;
+    max-width: 1160px;
+}
+
 footer {
     width: 100%;
     max-width: 1200px;
