--- a/src/components/styles/partials/_header.scss
+++ b/src/components/styles/partials/_header.scss
@@ -44,6 +44,10 @@
             -webkit-transition: .5s;
             transition: .5s;
             font-size: 0.8rem;
+            
+            &:hover {
+              color: $highlight;
+            }
           }
           
           .navbar-link {
@@ -55,6 +59,11 @@
             padding: 0 .6rem;
             border-radius: 4px;
             transition: all 0.3s ease 0s;
+            
+            &:hover {
+              color: $highlight;
+              background: $text;
+            }
           }
 
             &:before {
