--- a/src/components/styles/partials/_footer.scss
+++ b/src/components/styles/partials/_footer.scss
@@ -1,3 +1,4 @@
+div {
 hr {
     background: #58a6ff;
     display: flex;
@@ -45,4 +46,5 @@ footer {
       font-size: 0.8rem;
       margin-bottom: 0;
   }
+}
 }
