--- a/src/components/styles/partials/_perfil.scss
+++ b/src/components/styles/partials/_perfil.scss
@@ -118,7 +118,8 @@
     }
 
     .perfil-avatar {
-      width: 20rem;
+      display: flex;
+      justify-content: flex-end;
 
       img {
       }
