--- a/src/components/styles/partials/_header.scss
+++ b/src/components/styles/partials/_header.scss
@@ -11,6 +11,20 @@
     display: flex;
     align-items: center;
     width: 100%;
+    
+    .logo-main {
+      display: flex;
+      align-items: center;
+      padding-right: 10px;
+      text-decoration: none;
+      color: var(--_color_0);
+    }
+
+    .logo {
+      width: 140px;
+      border-radius: 80%;
+      padding: 5px 20px;
+    }
 
     .spacer {
       flex: 1;
