--- a/src/components/styles/partials/_header.scss
+++ b/src/components/styles/partials/_header.scss
@@ -11,6 +11,8 @@
     display: flex;
     align-items: center;
     width: 100%;
+    max-width: 1200px;
+    margin: 0 auto;
     
     .logo-main {
       display: flex;
@@ -25,7 +27,26 @@
       border-radius: 80%;
       padding: 5px 20px;
     }
-
+    
+    p {
+      width: 100%;
+      font-size: 1rem;
+      font-weight: 700;
+      color: #ffffff;
+      margin: 0.5rem auto;
+      display: flex;
+      align-items: center;
+      
+       span {
+        font-size: 0.8rem;
+        color: #ffffff;
+        background: $highlight;;
+        padding: 0.1rem 0.5rem;
+        margin-left: 10px;
+        border-radius: 4px;
+      }
+    }
+    
     .spacer {
       flex: 1;
     }
