--- a/src/components/styles/partials/_header.scss
+++ b/src/components/styles/partials/_header.scss
@@ -76,16 +76,36 @@
           padding: 0 0.9rem;
           margin: 0;
 
-          a {
+          .navbar-route {
             transition: 0.5s;
             text-decoration: none;
             cursor: pointer;
             color: $text;
             -webkit-transition: .5s;
             transition: .5s;
-            font-size: 0.8rem;
+            font-size: 0.7rem;
             
             &:hover {
+              color: $highlight;
+            }
+            
+             &:before {
+              content: "";
+              position: absolute;
+              top: 0.8rem;
+              display: block;
+              width: 0%;
+              border-top: 3px solid $highlight;
+              transition: 0.5s;
+            }
+            &:hover:before {
+              width: 2%;
+            }
+            &:hover {
+              color: $highlight;
+            }
+
+            &:active {
               color: $highlight;
             }
           }
@@ -105,26 +125,6 @@
               background: $text;
             }
           }
-
-            &:before {
-              content: "";
-              position: absolute;
-              top: 0.8rem;
-              display: block;
-              width: 0%;
-              border-top: 3px solid $highlight;
-              transition: 0.5s;
-            }
-            &:hover:before {
-              width: 2%;
-            }
-            &:hover {
-              color: $highlight;
-            }
-
-            &:active {
-              color: $highlight;
-            }
           }
         }
       }
