--- a/src/components/styles/partials/_header.scss
+++ b/src/components/styles/partials/_header.scss
@@ -115,7 +115,7 @@
             font-size: 0.7rem;
             font-weight: bold;
             background: $highlight;
-            color: $text;
+            color: $primary;
             padding: 0 .6rem;
             border-radius: 4px;
             transition: all 0.3s ease 0s;
