--- a/src/components/styles/menuoverlay.scss
+++ b/src/components/styles/menuoverlay.scss
@@ -57,7 +57,7 @@
           transition: 0.5s;
   
           &:hover {
-            color: $highlight;
+            color: #58a6ff;
           }
         }
       }
