--- a/src/components/styles/menuoverlay.scss
+++ b/src/components/styles/menuoverlay.scss
@@ -7,7 +7,7 @@
     background-blend-mode: color-dodge;
     background-position: center;
     background-size: cover;
-    background-color: #0b0b0b;
+    background-color: #0d1117;
     position: fixed;
     top: 0;
     left: 0;
