--- a/src/components/styles/partials/_project-page.scss
+++ b/src/components/styles/partials/_project-page.scss
@@ -107,7 +107,7 @@
     margin-right: 10px;
   }
   #portfolio-projects .info .buttons a:hover {
-    background: #39cd60;
+    background: $highlight;
   }
   #portfolio-projects .info .buttons a:hover .fas {
     color: $accent;
