--- a/src/components/styles/partials/_perfil.scss
+++ b/src/components/styles/partials/_perfil.scss
@@ -1,18 +1,16 @@
 #perfil {
   display: flex;
   height: 100vh;
-  background-blend-mode: color-dodge;
-  background-position: center;
+  background-color: #0d1117;
   background-size: cover;
+  background-image: linear-gradient(#000,rgba(0,0,0,.6),rgba(0,0,0,.6),#000),url(../../../images/photo-main.jpg);
   background-color: $primary;
-
-  @include mq(480) {
-      height: auto;
-  }
 
   .perfil-container {
     width: 100%;
+    max-width: 1200px;
     display: flex;
+    margin: 0 auto;
     flex-direction: row;
     justify-content: center;
     align-items: center;
@@ -31,16 +29,22 @@
 
   .perfil-text {
     width: 100%;
-    max-width: 500px;
-    margin: 0 30px;
+    margin: 0 100px;
+
+    @include mq(480) {
+      margin: 0;
+    }
 
     h1 {
-      font-size: 4em;
+      font-size: 6em;
       line-height: 90px;
       margin-bottom: 12px;
+      color: #FFFFFF;
       
         @include mq(480) {
-          font-size: 2.5em;
+          font-size: 5em;
+          margin-bottom: 20px;
+          line-height: 1;
         }
     }
 
@@ -50,47 +54,9 @@
       line-height: 1.4;
     }
 
-    @media only screen and (max-width: 900px) and (orientation: landscape) {
-      width: 390px;
-      margin: 0;
-    }
-
-    h1 {
-      font-size: 3.5em;
-      line-height: 90px;
-      margin-bottom: 12px;
-
-      @include mq(480) {
-        font-size: 3em;
-        margin-bottom: 0;
-        line-height: 1.2;
-      }
-
-      @include mq(320) {
-        font-size: 3em;
-        line-height: 75px;
-      }
-
       @media only screen and (max-width: 900px) and (orientation: landscape) {
-        font-size: 3.3em;
+        width: 390px;
         margin: 0;
-      }
-    }
-
-    h2 {
-      font-size: 2.4em;
-      margin-bottom: 0.2em;
-
-      @include mq(480) {
-        font-size: 1.6em;
-      }
-
-      @include mq(320) {
-        font-size: 1.4em;
-      }
-
-      @media only screen and (max-width: 900px) and (orientation: landscape) {
-        font-size: 1.4em;
       }
     }
   }
@@ -107,33 +73,15 @@
 
 
       a {
-        font-size: 2rem;
+        font-size: 3rem;
         color: $text;
         text-decoration: none;
         transition: all 0.3s ease-in-out;
         display: inline-block;
-        padding: 30px 10px;
+        padding: 30px 30px 30px 0;
         &:hover {
           transform: scale(1.1);
         }
-      }
-    }
-
-    .perfil-avatar {
-      display: flex;
-      justify-content: flex-end;
-
-      img {
-      }
-
-      @include mq(1140) {
-        width: 16rem;
-        margin-left: 20px;
-      }
-
-      @include mq(480) {
-        margin-top: 100px;
-        margin-left: 0;
       }
     }
   }
