--- a/src/components/styles/partials/_perfil.scss
+++ b/src/components/styles/partials/_perfil.scss
@@ -3,7 +3,7 @@
   height: 100vh;
   background-color: #0d1117;
   background-size: cover;
-  background-image: linear-gradient(#000,rgba(0,0,0,.6),rgba(0,0,0,.6),#000),url(../../../images/photo-main.jpg);
+  background-image: linear-gradient(#000,rgba(0,0,0,.6),rgba(0,0,0,.6),#000),url(./photo-main.jpg);
   background-color: $primary;
 
   .perfil-container {
