--- a/src/components/styles/partials/_perfil.scss
+++ b/src/components/styles/partials/_perfil.scss
@@ -3,7 +3,8 @@
   height: 100vh;
   background-color: #0d1117;
   background-size: cover;
-  background-image: linear-gradient(#000,rgba(0,0,0,.6),rgba(0,0,0,.6),#000),url(./photo-main.jpg);
+  background-image: linear-gradient(#000,rgba(0,0,0,.6),rgba(0,0,0,.6),#000),url(images/photo-main.jpg);
+  //background-image: linear-gradient(#000,rgba(0,0,0,.6),rgba(0,0,0,.6),#000),url(https://images.unsplash.com/photo-1572666341285-c8cb9790ca50?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1740&q=80);
   background-color: $primary;
 
   .perfil-container {
