changed images and perfil

--- a/src/components/styles/partials/_headroom.scss
+++ b/src/components/styles/partials/_headroom.scss
@@ -11,7 +11,7 @@
     position: relative;
     transform: translateY(0);
     @include headroom-trans;
-    background-color: #161b22;
+    background-color: #0d1117;
   }
   .headroom--scrolled {
     @include headroom-trans;
@@ -26,7 +26,7 @@
     transform: translateY(0);
     @include headroom-trans;
     background-blend-mode: multiply;
-    background-color: #161b22;
+    background-color: #0d1117;
     box-shadow: 0 5px 30px rgba(0, 0, 0, 0.2);
   }
   
