--- a/src/components/styles/partials/_perfil.scss
+++ b/src/components/styles/partials/_perfil.scss
@@ -4,7 +4,7 @@
   background-color: #0d1117;
   background-size: cover;
   //background-image: linear-gradient(#000,rgba(0,0,0,.6),rgba(0,0,0,.6),#000),url(images/photo-main.jpg);
-  background-image: linear-gradient(#000,rgba(0,0,0,.6),rgba(0,0,0,.6),#000),url(https://images.unsplash.com/photo-1580927752452-89d86da3fa0a?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80);
+  background-image: linear-gradient(#0d1117,rgba(0,0,0,.6),rgba(0,0,0,.6),#0d1117),url(https://images.unsplash.com/photo-1580927752452-89d86da3fa0a?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80);
   background-color: $primary;
 
   .perfil-container {
